--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <span>Garmin, Polar, Suunto</span>
              </div>
              <div class="header__contacts">
-                <a href="tel:+74999228974 " class="header__phone">+7 (499) 922-89-74</a>
+                <a href="tel:+380999999999 " class="header__phone">+380 (99) 999-99-99</a>
                 <button data-modal="consultation" class="button">заказать звонок</button>
              </div>
             </header>
@@ -141,8 +141,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -167,8 +167,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">6 690 грн.</div>
+                            <div class="catalog-item__new-price">6 641 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -193,8 +193,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -219,8 +219,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -245,8 +245,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">6 690 грн.</div>
+                            <div class="catalog-item__new-price">6 641 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -271,8 +271,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">6 690 грн.</div>
+                            <div class="catalog-item__new-price">6 641 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -299,8 +299,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -328,8 +328,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -354,8 +354,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">4 750 грн.</div>
+                            <div class="catalog-item__new-price">4 500 грн.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
@@ -393,8 +393,8 @@
     </section>
     <section class="footer">
         <div class="footer__info">
-            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
-            <a href="#" class="footer__phone">8 (499) 922-89-74</a>
+            <address class="footer__addr">Київ, вулиця Хрещатик, 14</address>
+            <a href="tel:+380999999999" class="footer__phone">+380 (99) 999-99-99</a>
             <div class="footer__social">
                 <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
                 <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
