--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
             </div>
             <form id="consultation-form" class="send-form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон">
+                <input name="phone" required placeholder="Ваш телефон" type="phone">
                 <input name="email" required placeholder="Ваше E-mail" type="email">
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -437,6 +437,7 @@
     <a href="#up" class="pageup">
         <img src="icons/up.svg" alt="up">
     </a>
+    <h5>hello world!</h5>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
