--- a/src/index.html
+++ b/src/index.html
@@ -437,6 +437,7 @@
     <a href="#up" class="pageup">
         <img src="icons/up.svg" alt="up">
     </a>
+    <h6>privet</h6>
     <h5>hello world!</h5>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
