--- a/src/index.html
+++ b/src/index.html
@@ -437,6 +437,7 @@
     <a href="#up" class="pageup">
         <img src="icons/up.svg" alt="up">
     </a>
+    <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, deserunt corrupti. Nam et totam dolores, ratione debitis dolorum esse illum, provident voluptas, sit ea. Dolores minus sit aliquid neque optio?</h5>
     <h5>hello world!</h5>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
