--- a/src/index.html
+++ b/src/index.html
@@ -439,6 +439,7 @@
     </a>
     <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, deserunt corrupti. Nam et totam dolores, ratione debitis dolorum esse illum, provident voluptas, sit ea. Dolores minus sit aliquid neque optio?</h5>
     <h5>hello world!</h5>
+    <h6>Lorem ipsum dolor sit amet.</h6>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
